<?xml version="1.0" encoding="utf-8"?>
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/radiogroup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    tools:showIn="@layout/fg_main">

    <RadioButton
        android:background="@color/trant"
        android:id="@+id/rb_myself"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:button="@null"
        android:drawableTop="@drawable/btn_main_myself"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp"
        android:drawablePadding="5dp"
        android:text="@string/main_myself"
        android:textColor="@color/black"
        android:textSize="14sp"/>
    <RadioButton
        android:background="@color/trant"
        android:id="@+id/rb_news"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:button="@null"
        android:drawableTop="@drawable/btn_main_news"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp"
        android:drawablePadding="5dp"
        android:text="@string/main_news"
        android:textColor="@color/black"
        android:textSize="14sp"/>
    <RadioButton
        android:background="@color/trant"
        android:id="@+id/rb_cap"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:button="@null"
        android:drawableTop="@mipmap/btn_cap"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp"
        android:drawablePadding="5dp"
        android:textColor="@color/black"
        />
    <RadioButton
        android:background="@color/trant"
        android:id="@+id/rb_speak"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:button="@null"
        android:drawableTop="@drawable/btn_main_speak"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp"
        android:drawablePadding="5dp"
        android:text="@string/main_speak"
        android:textColor="@color/black"
        android:textSize="14sp"/>
    <RadioButton
        android:background="@color/trant"
        android:id="@+id/rb_search"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:button="@null"
        android:drawableTop="@drawable/btn_main_search"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp"
        android:drawablePadding="5dp"
        android:text="@string/main_search"
        android:textColor="@color/black"
        android:textSize="14sp"/>

</RadioGroup>