<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/public_top">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <LinearLayout
                android:layout_marginTop="@dimen/start_padding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/iv_website"
                    style="@style/search_img"
                    android:src="@drawable/btn_search_websit"/>
                <TextView
                    style="@style/search_text"
                    android:text="@string/search_website"
                    android:typeface="sans"
                    />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <LinearLayout
                android:layout_marginTop="@dimen/start_padding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/iv_wchat"
                    style="@style/search_img"
                    android:src="@drawable/btn_search_wchat"/>
                <TextView
                    style="@style/search_text"
                    android:text="@string/search_wchat"
                    android:typeface="serif"
                    />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <LinearLayout
                android:layout_marginTop="@dimen/start_padding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/iv_tao"
                    style="@style/search_img"
                    android:src="@drawable/btn_search_tao"/>
                <TextView
                    android:typeface="monospace"
                    style="@style/search_text"
                    android:text="@string/search_tao"
                    />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <LinearLayout
                android:layout_marginTop="@dimen/start_padding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/iv_ticket"
                    style="@style/search_img"
                    android:src="@drawable/btn_search_ticket"/>
                <TextView

                    style="@style/search_text"
                    android:text="@string/search_ticket"
                    />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <LinearLayout
                android:layout_marginTop="@dimen/start_padding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/iv_park"
                    style="@style/search_img"
                    android:src="@drawable/btn_search_park"/>
                <TextView
                    style="@style/search_text"
                    android:text="@string/search_park"
                    />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <LinearLayout
                android:layout_marginTop="@dimen/start_padding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/iv_sound"
                    style="@style/search_img"
                    android:src="@drawable/btn_search_soud"/>
                <TextView
                    style="@style/search_text"
                    android:text="@string/search_hotel"
                    />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <LinearLayout
                android:layout_marginTop="@dimen/start_padding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/iv_food"
                    style="@style/search_img"
                    android:src="@drawable/btn_search_food"/>
                <TextView
                    style="@style/search_text"
                    android:text="@string/search_food"
                    />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <LinearLayout
                android:layout_marginTop="@dimen/start_padding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_sugesst"
                    style="@style/search_img"
                    android:src="@drawable/btn_search_suggest"/>
                <TextView
                    style="@style/search_text"
                    android:text="@string/search_sugesstion"
                    />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>


</LinearLayout>