<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/lin_myself"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">
        <ImageButton
            android:id="@+id/rb_myself"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:src="@drawable/btn_main_myself"
            android:background="@color/trant"/>

        <TextView
            android:layout_marginTop="5dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_myself"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:layout_marginBottom="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lin_news"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">
        <ImageButton
            android:id="@+id/rb_news"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:src="@drawable/btn_main_news"
            android:background="@color/trant"/>

        <TextView
            android:layout_marginTop="5dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_news"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:layout_marginBottom="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">
        <ImageButton
            android:id="@+id/rb_cap"
            android:layout_marginTop="17dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/btn_cap"
            android:background="@color/trant"
            android:layout_gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lin_speak"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">
        <ImageButton
            android:id="@+id/rb_speak"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:src="@drawable/btn_main_speak"
            android:background="@color/trant"/>

        <TextView
            android:layout_marginTop="5dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_speak"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:layout_marginBottom="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lin_search"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">
        <ImageButton
            android:id="@+id/rb_search"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:src="@drawable/btn_main_search"
            android:background="@color/trant"/>

        <TextView
            android:layout_marginTop="5dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_search"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:layout_marginBottom="10dp"/>
    </LinearLayout>

</LinearLayout>