<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg_fg">
    <ImageView
        android:id="@+id/icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@mipmap/bg_logo_bottom"/>

    <ScrollView
        android:layout_below="@+id/icon"
        android:layout_marginTop="@dimen/start_padding"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:background="@mipmap/bg_myself"
        android:layout_marginLeft="@dimen/start_padding"
        android:layout_marginRight="@dimen/start_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <RelativeLayout
                android:id="@+id/re_centure"
                android:layout_marginTop="@dimen/start_padding"
                android:layout_marginLeft="@dimen/myself_padding"
                android:layout_marginRight="@dimen/myself_padding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tv_message"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@mipmap/img_myself_centure"
                    android:padding="@dimen/seartch_text"
                    android:text="@string/myself_c"
                    android:gravity="center"
                    android:textSize="20sp"
                    />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/arrow"
                    android:layout_alignParentRight="true"/>
            </RelativeLayout>
            <LinearLayout
                android:id="@+id/lin_first"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@mipmap/line"
                android:layout_marginLeft="@dimen/start_padding"
                android:layout_marginRight="@dimen/start_padding"></LinearLayout>

            <RelativeLayout
                android:id="@+id/re_service"
                android:layout_marginTop="@dimen/start_padding"
                android:layout_marginLeft="@dimen/myself_padding"
                android:layout_marginRight="@dimen/myself_padding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tv_service"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@mipmap/img_myself_service"
                    android:padding="@dimen/seartch_text"
                    android:text="@string/myself_s"
                    android:gravity="center"
                    android:textSize="20sp"
                    />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/arrow"
                    android:layout_alignParentRight="true"/>
            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@mipmap/line"
                android:layout_marginLeft="@dimen/start_padding"
                android:layout_marginRight="@dimen/start_padding"></LinearLayout>

            <RelativeLayout
                android:id="@+id/re_traffic"
                android:layout_marginTop="@dimen/start_padding"
                android:layout_marginLeft="@dimen/myself_padding"
                android:layout_marginRight="@dimen/myself_padding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tv_traffic"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@mipmap/img_myself_traffic"
                    android:padding="@dimen/seartch_text"
                    android:text="@string/myself_t"
                    android:gravity="center"
                    android:textSize="20sp"
                    />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/arrow"
                    android:layout_alignParentRight="true"/>
            </RelativeLayout>
            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@mipmap/line"
                android:layout_marginLeft="@dimen/start_padding"
                android:layout_marginRight="@dimen/start_padding"></LinearLayout>

            <LinearLayout
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="@dimen/myself_padding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/tv_tel"
                        style="@style/news_text_n"
                        android:text="@string/myself_s_tel"
                        />
                    <TextView
                        android:layout_marginLeft="5dp"
                        style="@style/news_text_n"
                        android:text="022-23126808"
                        android:autoLink="all"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:src="@mipmap/myself_tel"
                        android:layout_gravity="center_vertical"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/tv_up_tel"
                        style="@style/news_text_n"
                        android:text="@string/myself_c_tel"
                        />
                    <TextView
                        android:layout_marginLeft="5dp"
                        style="@style/news_text_n"
                        android:text="022-23307222"
                        android:autoLink="all"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:src="@mipmap/myself_tel"
                        android:layout_gravity="center_vertical"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>




</RelativeLayout>